TestSuite/PascalABCTests/errors/err0060.pas
var a : System.void;
begin

end.